correct some counts

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Religion-Bible-Reference
 
+0.012   2008-06-14
+        correct chapter/verse counts in Ex, 1Sam, Zec, Ps, Acts, 2Cor
+        (thanks to Joshua Barratt for noticing and (!) patching)
+
 0.011   2006-11-10
         some cleanup
         still not suitable for much
